syntax = "proto3";

service AuthAndRegistService{
    rpc TryRegistr(RegistrationInput) returns (RegistrationResult);
    rpc TryVerifRegistr(RegistrationVerificationInput) returns (RegistrationVerificationResult);
    rpc Authenticate(AuthInput) returns (AuthResult);
}

message RegistrationInput{
    string email = 1;
    string password = 2;
}
message RegistrationVerificationInput{
    string randomDataToken = 1;
}
message AuthInput{
    string jwtToken = 1;
}
message RegistrationResult{
    string answer = 1;
    bool isOk = 2;
}
message RegistrationVerificationResult{
    string token = 1;
    bool isOk = 2;
}
message AuthResult{
    int64 userId = 1;
    string nextToken = 2;
}
